tests/integration/snapshots/integration__conformance__y_number_real_exponent.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: ["format"]
status: 0
success: true
stdin ---
[123e45]
stdout ---
[123e45]

stderr ---
