tests/integration/snapshots/integration__conformance__y_number_real_fraction_exponent.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
[123.456e78]
stdout ---
[123.456e78]

stderr ---
