tests/integration/snapshots/integration__conformance__y_number_real_fraction_exponent.json.snap
---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
[123.456e78]
stdout --- 
[123.456e78]
stderr --- 
<empty>
