tests/integration/snapshots/integration__conformance__y_number_real_neg_exp.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
[1e-2]
stdout ---
[1e-2]

stderr ---
