tests/integration/snapshots/integration__conformance__y_number_real_neg_exp.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 0
success: true
stdout ---
[1e-2]
stderr ---
