tests/integration/snapshots/integration__conformance__y_number_real_pos_exponent.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
[1e+2]
stdout ---
[1e2]

stderr ---
