tests/integration/snapshots/integration__conformance__y_number_real_pos_exponent.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: ["format"]
status: 0
success: true
stdin ---
[1e+2]
stdout ---
[1e+2]

stderr ---
